--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste</title>
+  <meta charset="UTF-8" />
+  <title>Formulário de Login e Registro com HTML5 e CSS3</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <script src="script.js"></script>
+  <link rel="stylesheet" type="text/css" href="estilo.css" />
 </head>
 <body>
-    
+<div class="container" >
+  <a class="links" id="paracadastro"></a>
+  <a class="links" id="paralogin"></a>
+
+  <div class="content">
+    <!--FORMULÁRIO DE LOGIN-->
+    <div id="login">
+      <form method="post" action="">
+        <h1>Login</h1>
+        <p>
+          <label for="nome_login">Seu nome</label>
+          <input id="nome_login" name="nome_login" required="required" type="text" placeholder="ex. contato@htmlecsspro.com"/>
+        </p>
+
+        <p>
+          <label for="email_login">Seu e-mail</label>
+          <input id="email_login" name="email_login" required="required" type="password" placeholder="ex. senha" />
+        </p>
+
+        <p>
+          <input type="checkbox" name="manterlogado" id="manterlogado" value="" />
+          <label for="manterlogado">Manter-me logado</label>
+        </p>
+
+        <p>
+          <input type="submit" value="Logar" />
+        </p>
+
+        <p class="link">
+          Ainda não tem conta?
+          <a href="#paracadastro">Cadastre-se</a>
+        </p>
+      </form>
+    </div>
+   </div> 
+</div>
 </body>
 </html>
