--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Formulário de Login e Registro com HTML5 e CSS3</title>
+  <meta http-equiv="X-UA-Compatible" content="IE-edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <script src="script.js"></script>
   <link rel="stylesheet" type="text/css" href="estilo.css" />
