--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Fazer Login no SysUnity</title>
+  <meta http-equiv="X-UA-Compatible" content="IE-edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <script src="login.js"></script>
   <link rel="stylesheet" type="text/css" href="login.css" />
