trocando input por button

--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
   <title>Formulário de Login e Registro com HTML5 e CSS3</title>
   <meta http-equiv="X-UA-Compatible" content="IE-edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <script src="script.js"></script>
-  <link rel="stylesheet" type="text/css" href="estilo.css" />
+  <script src="home.js"></script>
+  <link rel="stylesheet" type="text/css" href="home.css" />
 </head>
 <body>
 <div class="container" >
-  <a class="links" id="paracadastro"></a>
-  <a class="links" id="paralogin"></a>
-
-  <div class="content">
-    <!--FORMULÁRIO DE LOGIN-->
-    <div id="login">
+    <div class="content">
+    
+    <div id="home">
       <form method="post" action="">
-        <h1>Login</h1>
+        <h1 id="hello">Olá Taila,</h1>
+        <h1>seja bem vinda!</h1>
         <p>
           <label for="nome_login">Seu nome</label>
           <input id="nome_login" name="nome_login" required="required" type="text" placeholder="ex. contato@htmlecsspro.com"/>
