--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
         </p>
 
         <p>
-          <input type="submit" value="ENTRAR" />
+          <button id="btn_Entrar" type="button" value="ENTRAR"></button>
         </p>
       </form>
     </div>
