trocando o value do button por onclick

--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
         </p>
 
         <p>
-          <button id="btn_Entrar" type="button" value="ENTRAR"></button>
+          <button id="btn_Entrar" type="button" onclick="entrar()">Entrar</button>
         </p>
       </form>
     </div>
