--- a/login.html
+++ b/login.html
@@ -14,6 +14,7 @@
   <div class="content">
     <h1>SysUnity</h1>
     <!--FORMULÁRIO DE LOGIN-->
+    <div class="quadroLogin">
     <div id="login">
       <form method="post" action="">
         <h2>Login</h2>
@@ -31,6 +32,7 @@
           <button id="btn_Entrar" type="button" onclick="entrar()">Entrar</button>
         </p>
       </form>
+      </div>
     </div>
   </div> 
 </div>
