--- a/index.html
+++ b/index.html
@@ -13,35 +13,28 @@
 <div class="container" >
     <div class="content">
     
-    <div id="home">
-      <form method="post" action="">
-        <h1 id="hello">Olá Taila,</h1>
-        <h1>seja bem vinda!</h1>
-        <p>
-          <label for="nome_login">Seu nome</label>
-          <input id="nome_login" name="nome_login" required="required" type="text" placeholder="ex. contato@htmlecsspro.com"/>
-        </p>
+      <div id="home">
+        <form method="post" action="">
 
-        <p>
-          <label for="email_login">Seu e-mail</label>
-          <input id="email_login" name="email_login" required="required" type="password" placeholder="ex. senha" />
-        </p>
+          <div class="barra-status">
+            <h1 id="hello">Olá Taila,</h1>
+            <h1>seja bem vinda!</h1>
+            <div class="barra-logado">
+              <img src="" alt="">
+            </div>
+          </div>
+          <p>
+          </p>
 
-        <p>
-          <input type="checkbox" name="manterlogado" id="manterlogado" value="" />
-          <label for="manterlogado">Manter-me logado</label>
-        </p>
+          <p>
+          </p>
 
-        <p>
-          <input type="submit" value="Logar" />
-        </p>
+          <p>
+          </p>
 
-        <p class="link">
-          Ainda não tem conta?
-          <a href="#paracadastro">Cadastre-se</a>
-        </p>
-      </form>
-    </div>
+        
+        </form>
+      </div>
    </div> 
 </div>
 </body>
