--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Formulário de Login e Registro com HTML5 e CSS3</title>
+  <title>SysUnity</title>
   <meta http-equiv="X-UA-Compatible" content="IE-edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <script src="home.js"></script>
@@ -16,13 +16,25 @@
       <div id="home">
         <form method="post" action="">
 
-          <div class="barra-status">
+          <section class="barra-status">
             <h1 id="hello">Olá Taila,</h1>
             <h1>seja bem vinda!</h1>
             <div class="barra-logado">
               <img src="" alt="">
+              <h3>usuario_login</h3>
+              <!--Pesquisar como faz o scroll de informações-->
+              <div><h4>Configurações</h4><img src="" alt="" sizes="" srcset=""></div>
+              <div><h4>Sair</h4><img src="" alt="" sizes="" srcset=""></div>
             </div>
-          </div>
+          </section>
+          <section class="sidebar">
+            <h1>Menu</h1>
+            <div class="sidebar-Usuario">
+              <!--Pesquisar como faz o scroll de informações--> 
+
+            </div>
+
+          </section>
           <p>
           </p>
 
