--- a/login.html
+++ b/login.html
@@ -19,19 +19,22 @@
     <div id="login">
       <form method="post" action="">
         <h2>Login</h2>
-        <p>
-          <label for="usuario_login">Usuário</label>
-          <input id="usuario_login" name="usuario_login" required="required" type="text" placeholder="digite seu usuário..."/>
+        <br>
+          <p>
+            <label for="usuario_login">Usuário</label>
+            <br>
+            <input id="usuario_login" name="usuario_login" required="required" type="text" placeholder="Digite seu usuário..."/>
+          </p>
+          <p>
+            <label for="senha_login">Senha</label>
+            <br>
+            <input id="senha_login" name="senha_login" required="required" type="password" placeholder="Digite sua senha..."/>
+          </p>
+        <div class="btn-group">
+          <p>
+          <button class="btn btn-primary" id="btn_Entrar" type="button" onclick="entrar()">ENTRAR</button>
         </p>
-
-        <p>
-          <label for="senha_login">Senha</label>
-          <input id="senha_login" name="senha_login" required="required" type="password" placeholder="digite sua senha..."/>
-        </p>
-
-        <p>
-          <button id="btn_Entrar" type="button" onclick="entrar()">Entrar</button>
-        </p>
+        </div>
       </form>
       </div>
     </div>
