retirado link das imagens

--- a/login.html
+++ b/login.html
@@ -13,11 +13,11 @@
 <body>
   <section>
     <div class="background">
-      <a href=""><img src="images/Coluna - PC e globo.png"/></a> 
-      <a href=""><img src="images/Coluna - Gráfico com seta.png"/></a>
-      <a href=""><img src="images/Coluna - Tela com alvo.png"/></a>
-      <a href=""><img src="images/Coluna - Gráfico2.png"/></a>
-      <a href=""><img src="images/Coluna - PC e globo.png"/></a> 
+      <a href=""><img src=""/></a> 
+      <a href=""><img src=""/></a>
+      <a href=""><img src=""/></a>
+      <a href=""><img src=""/></a>
+      <a href=""><img src=""/></a> 
     </div>
   </section>
 <div class="container">
