--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Fazer Login no SysUnity</title>
   <meta http-equiv="X-UA-Compatible" content="IE-edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <script src="script/login.js"></script>
-  <link rel="stylesheet" type="text/css" href="css/login.css" />
+  <script src="script/index.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/index.css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 </head>
 <body>
