--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE-edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <script src="home.js"></script>
-  <link rel="stylesheet" type="text/css" href="home.css" />
+  <link rel="stylesheet" type="text/css" href="css/home.css" />
 </head>
 <body>
 <div class="container" >
