--- a/login.html
+++ b/login.html
@@ -1,8 +1,11 @@
 
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8" />
+  <head>
+    <meta charset="UTF-8" />
+    <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-database.js"></script>
+    <script src="script/database/database-connection.js"></script>
   <title>Login - SysUnity</title>
   <meta http-equiv="X-UA-Compatible" content="IE-edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
@@ -48,6 +51,5 @@
 </div>
 
 <script src="script/login.js"></script>
-
 </body>
 </html>
