Modificações urgentes no css

--- a/home.html
+++ b/home.html
@@ -10,20 +10,20 @@
   <link rel="stylesheet" type="text/css" href="css/home.css" />
 </head>
 <body>
-<div class="container" >
+<div>
     <div class="content">
     
       <div id="home">
         <form method="post" action="">
           <section class="barra-status">
-            <h1 id="hello">Olá Taila,</h1>
-            <h1>seja bem vinda!</h1>
+            <div class="aux">    
+              <h1 id="hello">Olá Taila,</h1>
+              <h1>seja bem vinda!</h1>
+            </div>
             <div class="barra-logado">
               <img src="" alt="">
-              <h3>usuario_login</h3>
+              <p class="aux2">usuario_login</p>
               <!--Pesquisar como faz o scroll de informações-->
-              <div><h4>Configurações</h4><img src="" alt="" sizes="" srcset=""></div>
-              <div><h4>Sair</h4><img src="" alt="" sizes="" srcset=""></div>
             </div>
           </section>
           <section class="sidebar">
