alterado e corrigido form login

--- a/index.html
+++ b/index.html
@@ -24,26 +24,24 @@
   <div class="content">
     <h1>SysUnity</h1>
     <!--FORMULÁRIO DE LOGIN-->
-    <div class="quadroLogin">
     <div id="login">
-      <form method="post" action="">
+      
         <h2>Login</h2>
         <br>
           <p>
             <label for="usuario_login">Usuário</label>
             <br>
-            <input id="usuario_login" name="usuario_login" required="required" type="text" placeholder="Digite seu usuário..."/>
+            <input id="usuario_login" name="usuario_login" required="required" type="text" placeholder="digite seu usuário..."/>
           </p>
           <p>
             <label for="senha_login">Senha</label>
             <br>
-            <input id="senha_login" name="senha_login" required="required" type="password" placeholder="Digite sua senha..."/>
+            <input id="senha_login" name="senha_login" required="required" type="password" placeholder="digite sua senha..."/>
           </p>
         <div class="btn-group">
           <button class="btn btn-primary" id="btn_Entrar" type="button" onclick="entrar()">ENTRAR</button>
-      </form>
+      
       </div>
-    </div>
   </div> 
 </div>
 </div>
