--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
   <title>Fazer Login no SysUnity</title>
@@ -9,7 +9,6 @@
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-database.js"></script>
   <script src="script/database/database-connection.js"></script>
-  <script src="script/index.js"></script>
   <link rel="stylesheet" type="text/css" href="css/index.css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 </head>
@@ -43,12 +42,13 @@
             <input id="senha_login" name="senha_login" required="required" type="password" placeholder="Digite sua senha..."/>
           </p>
         <div class="btn-group">
-          <button class="btn btn-primary" id="btn_Entrar" type="button" onclick="entrar()">ENTRAR</button>
+          <button class="btn btn-primary" id="btn_Entrar" type="button">ENTRAR</button>
       </form>
       </div>
     </div>
   </div> 
 </div>
 </div>
+  <script src="script/index.js"></script>
 </body>
 </html>
