Adição da imagem de fundo

--- a/index.html
+++ b/index.html
@@ -11,15 +11,10 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <section>
-    <div class="background">
-      <a href=""><img src=""/></a> 
-      <a href=""><img src=""/></a>
-      <a href=""><img src=""/></a>
-      <a href=""><img src=""/></a>
-      <a href=""><img src=""/></a> 
-    </div>
-  </section>
+  <div>
+    <img class="ui" src="/images/background- sys unity2.png" alt="">
+  </div>
+
 <div class="container">
   <div class="content">
     <h1>SysUnity</h1>
