criando HTML para pag-home e adicionando imgs

--- a/home.html
+++ b/home.html
@@ -13,35 +13,154 @@
     <div class="content">
       <div id="home">
         <form method="post" action="">
-          <section class="barra-status">
-            <div class="aux">    
+          <header class="barra-status">
+            <div class="welcome">    
               <h1 id="hello">Olá Taila,</h1>
-              <h1> seja bem vinda!</h1>
+              <h1>seja bem vinda!</h1>
             </div>
-            <div class="barra-logado">
-              <img src="" alt="">
-              <p class="aux2">usuario_login</p>
-              <!--Pesquisar como faz o scroll de informações-->
-            </div>
-          </section>
+            <!--dropdown do usuário-->
+            <ul class="barra-logado">
+              <li>
+                <img src="images/monitor.png" alt="" width="10%">
+                <a class="log-usuario">usuario_login</a>
+                <img src="images/arrowDown.png" alt="" width="10%">
+                <ul>
+                  <li>
+                    <a href="">Usuário</a>
+                    <img src="images/arrowDown.png" alt="" width="10%">
+                  </li>
+                  <li>
+                    <a href="">Usuário</a>
+                    <img src="images/arrowDown.png" alt="" width="10%">
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </header>
+          
           <section class="sidebar">
-            <h1>Menu</h1>
-            <div class="sidebar-Usuario">
-              <!--Pesquisar como faz o scroll de informações--> 
-
-            </div>
-
+            <h3>Menu</h3>
+            <!--dropdown do menu-->
+             <nav class="sidebar-Usuario">
+               <ul>
+                  <li>
+                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <a href="">Usuário</a>
+                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <ul>
+                      <li><a href="">Cadastrar usuário</a></li>
+                      <li><a href="">Gerenciar usuários</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <a href="">Vendas</a>
+                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <ul>
+                      <li><a href="">Cadastrar usuário</a></li>
+                      <li><a href="">Gerenciar usuários</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <a href="">Produtos</a>
+                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <ul>
+                      <li><a href="">Cadastrar usuário</a></li>
+                      <li><a href="">Gerenciar usuários</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <a href="">Relatórioa</a>
+                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <ul>
+                      <li><a href="">Cadastrar usuário</a></li>
+                      <li><a href="">Gerenciar usuários</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <a href="">Encomendas</a>
+                  </li>
+                  <li>
+                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <a href="">Histórico</a>
+                  </li>
+                  <li>
+                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <a href="">Configuração</a>
+                  </li>
+                  <li>
+                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <a href="">Suporte</a>
+                  </li>
+               </ul>
+              </nav>
           </section>
-          <p>
-          </p>
 
-          <p>
-          </p>
-
-          <p>
-          </p>
-
-        
+          <section class="conteudo">
+            <header>
+              <div>
+                <img src="images/arrowDown.png" alt="" width="30%">
+                <p>3 dias</p>
+              </div>
+              <div>
+                <img src="images/arrowDown.png" alt="" width="30%">
+                <p>2 dias</p>
+              </div>
+              <div>
+                <img src="images/arrowDown.png" alt="" width="30%">
+                <p>1 dia</p>
+              </div>
+            </header>
+            <article>
+              <h1>Encomendas</h1>
+              <table>
+                <tr><td><img src="images/arrowDown.png" alt="" width="10%"></td></tr>
+                <tr><td>O produto {nome} de código {id} faltam 2 dias para a entrega.</td></tr>
+                <tr><td>O produto {nome} de código {id} faltam 3 dias para a entrega.</td></tr>
+              </table>
+              <a href="">Ver Mais</a>
+            </article>
+            <footer>
+              <h1>Validade dos Produtos</h1>
+              <table>
+                <tr><td></td></tr>
+                <tr>
+                  <td>
+                    <img src="images/arrowDown.png" alt="" width="10%">
+                    O produto {nome} de código {id} faltam 2 dias para a entrega.
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <img src="images/arrowDown.png" alt="" width="10%">
+                    O produto {nome} de código {id} faltam 3 dias para a entrega.
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <img src="images/arrowDown.png" alt="" width="10%">
+                    O produto {nome} de código {id} faltam 3 dias para a entrega.
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <img src="images/arrowDown.png" alt="" width="10%">
+                    O produto {nome} de código {id} faltam 3 dias para a entrega.
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <img src="images/arrowDown.png" alt="" width="10%">
+                    O produto {nome} de código {id} faltam 3 dias para a entrega.
+                  </td>
+                </tr>
+              </table>
+              <a href="">Ver Mais</a>
+            </footer>
+          </section>
         </form>
       </div>
    </div> 
