--- a/home.html
+++ b/home.html
@@ -21,17 +21,17 @@
             <!--dropdown do usuário-->
             <ul class="barra-logado">
               <li>
-                <img src="images/monitor.png" alt="" width="10%">
+                <img src="images/baseline_account_circle_black_48dp.png" alt="" width="10%">
                 <a class="log-usuario">usuario_login</a>
                 <img src="images/arrowDown.png" alt="" width="10%">
                 <ul>
                   <li>
-                    <a href="">Usuário</a>
-                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <a href="">Configurações</a>
+                    <img src="images/baseline_settings_black_48dp.png" alt="" width="10%">
                   </li>
                   <li>
-                    <a href="">Usuário</a>
-                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <a href="">Sair</a>
+                    <img src="images/baseline_logout_black_48dp.png" alt="" width="10%">
                   </li>
                 </ul>
               </li>
@@ -88,7 +88,7 @@
                     <a href="">Histórico</a>
                   </li>
                   <li>
-                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <img src="images/baseline_settings_white_48dp.png" alt="" width="10%">
                     <a href="">Configuração</a>
                   </li>
                   <li>
