--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
               <li>
                 <img src="images/baseline_account_circle_black_48dp.png" alt="" width="10%">
                 <a class="log-usuario">usuario_login</a>
-                <img src="images/arrowDown.png" alt="" width="10%">
+                <img src="images/.png" alt="" width="10%">
                 <ul>
                   <li>
                     <a href="">Configurações</a>
@@ -44,36 +44,36 @@
              <nav class="sidebar-Usuario">
                <ul>
                   <li>
-                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <img src="images/outline_manage_accounts_white_48dp.png" alt="" width="10%">
                     <a href="">Usuário</a>
-                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <img src="images/.png" alt="" width="10%">
                     <ul>
                       <li><a href="">Cadastrar usuário</a></li>
                       <li><a href="">Gerenciar usuários</a></li>
                     </ul>
                   </li>
                   <li>
-                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <img src="images/baseline_shopping_bag_white_48dp.png" alt="" width="10%">
                     <a href="">Vendas</a>
-                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <img src="images/.png" alt="" width="10%">
                     <ul>
                       <li><a href="">Cadastrar usuário</a></li>
                       <li><a href="">Gerenciar usuários</a></li>
                     </ul>
                   </li>
                   <li>
-                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <img src="images/baseline_inventory_2_white_48dp.png" alt="" width="10%">
                     <a href="">Produtos</a>
-                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <img src="images/.png" alt="" width="10%">
                     <ul>
                       <li><a href="">Cadastrar usuário</a></li>
                       <li><a href="">Gerenciar usuários</a></li>
                     </ul>
                   </li>
                   <li>
-                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <img src="images/baseline_leaderboard_white_48dp.png" alt="" width="10%">
                     <a href="">Relatórioa</a>
-                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <img src="images/.png" alt="" width="10%">
                     <ul>
                       <li><a href="">Cadastrar usuário</a></li>
                       <li><a href="">Gerenciar usuários</a></li>
@@ -84,7 +84,7 @@
                     <a href="">Encomendas</a>
                   </li>
                   <li>
-                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <img src="images/baseline_history_white_48dp.png" alt="" width="10%">
                     <a href="">Histórico</a>
                   </li>
                   <li>
@@ -92,7 +92,7 @@
                     <a href="">Configuração</a>
                   </li>
                   <li>
-                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <img src="images/baseline_help_center_white_48dp.png" alt="" width="10%">
                     <a href="">Suporte</a>
                   </li>
                </ul>
@@ -102,22 +102,22 @@
           <section class="conteudo">
             <header>
               <div>
-                <img src="images/arrowDown.png" alt="" width="30%">
+                <img src="images/baseline_report_problem_black_48dp.png" alt="" width="30%">
                 <p>3 dias</p>
               </div>
               <div>
-                <img src="images/arrowDown.png" alt="" width="30%">
+                <img src="images/baseline_report_problem_black_48dp.png" alt="" width="30%">
                 <p>2 dias</p>
               </div>
               <div>
-                <img src="images/arrowDown.png" alt="" width="30%">
+                <img src="images/baseline_report_problem_black_48dp.png" alt="" width="30%">
                 <p>1 dia</p>
               </div>
             </header>
             <article>
               <h1>Encomendas</h1>
               <table>
-                <tr><td><img src="images/arrowDown.png" alt="" width="10%"></td></tr>
+                <tr><td><img src="images/.png" alt="" width="10%"></td></tr>
                 <tr><td>O produto {nome} de código {id} faltam 2 dias para a entrega.</td></tr>
                 <tr><td>O produto {nome} de código {id} faltam 3 dias para a entrega.</td></tr>
               </table>
@@ -129,31 +129,31 @@
                 <tr><td></td></tr>
                 <tr>
                   <td>
-                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <img src="images/.png" alt="" width="10%">
                     O produto {nome} de código {id} faltam 2 dias para a entrega.
                   </td>
                 </tr>
                 <tr>
                   <td>
-                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <img src="images/.png" alt="" width="10%">
                     O produto {nome} de código {id} faltam 3 dias para a entrega.
                   </td>
                 </tr>
                 <tr>
                   <td>
-                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <img src="images/.png" alt="" width="10%">
                     O produto {nome} de código {id} faltam 3 dias para a entrega.
                   </td>
                 </tr>
                 <tr>
                   <td>
-                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <img src="images/.png" alt="" width="10%">
                     O produto {nome} de código {id} faltam 3 dias para a entrega.
                   </td>
                 </tr>
                 <tr>
                   <td>
-                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <img src="images/.png" alt="" width="10%">
                     O produto {nome} de código {id} faltam 3 dias para a entrega.
                   </td>
                 </tr>
