--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -6,14 +5,14 @@
   <title>Fazer Login no SysUnity</title>
   <meta http-equiv="X-UA-Compatible" content="IE-edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;800;900&display=swap" rel="stylesheet">
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-database.js"></script>
   <script src="script/database/database-connection.js"></script>
   <link rel="stylesheet" type="text/css" href="css/index.css" />
 </head>
 <body>
-<div class="background">
-
 <div class="container">
   <div class="content">
     <h1>SysUnity</h1>
@@ -24,16 +23,14 @@
         <h2>Login</h2>
           <p>
             <label for="usuario_login">Usuário</label>
-
             <input id="usuario_login" name="usuario_login" required="required" type="text" placeholder="digite seu usuário..."/>
           </p>
           <p>
             <label for="senha_login">Senha</label>
-            
             <input id="senha_login" name="senha_login" required="required" type="password" placeholder="digite sua senha..."/>
           </p>
-        <div class="btn-group">
-          <button class="btn btn-primary" id="btn_Entrar" type="button" onclick="entrar()">ENTRAR</button>
+            <div class="btn-group">
+            <button class="btn btn-primary" id="btn_Entrar" type="button" onclick="entrar()">ENTRAR</button>
       
       </div>
   </div> 
