Funcionamento da tela de login

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <input id="senha_login" name="senha_login" required="required" type="password" placeholder="digite sua senha..."/>
           </p>
             <div class="btn-group">
-            <button class="btn btn-primary" id="btn_Entrar" type="button" onclick="entrar()">ENTRAR</button>
+            <button class="btn btn-primary" id="btn_Entrar" type="button">ENTRAR</button>
       
       </div>
   </div> 
@@ -38,6 +38,6 @@
 </div>
 </div>
 </div>
-  <script src="script/index.js"></script>
+  <script type="module" src="script/index.js"></script>
 </body>
 </html>
