--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
   <title>SysUnity</title>
   <meta http-equiv="X-UA-Compatible" content="IE-edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/home.css" />
 </head>
 <body>
@@ -79,7 +80,7 @@
                     </ul>
                   </li>
                   <li>
-                    <img src="images/arrowDown.png" alt="" width="10%">
+                    <img src="images/pizza-deliver.png" alt="" width="10%">
                     <a href="">Encomendas</a>
                   </li>
                   <li>
@@ -99,27 +100,27 @@
           </section>
 <!--Barra de alerta-->
           <section class="conteudo">
-            <header>
-              <div>
-                <img src="images/baseline_report_problem_black_48dp.png" alt="" width="30%">
+            <header class="barra-atention">
+              <div class="danger">
+                <img src="images/danger-yelow.png" alt="">
                 <p>3 dias</p>
               </div>
-              <div>
-                <img src="images/baseline_report_problem_black_48dp.png" alt="" width="30%">
+              <div class="danger">
+                <img src="images/danger-orange.png" alt="">
                 <p>2 dias</p>
               </div>
-              <div>
-                <img src="images/baseline_report_problem_black_48dp.png" alt="" width="30%">
+              <div class="danger">
+                <img src="images/danger-red.png" alt="">
                 <p>1 dia</p>
               </div>
             </header>
 
 <!--Tabela Encomendas-->
-            <section class="section table-encomendas">
+            <section class="section-table">
               <h1>Encomendas</h1>
-              <table class="table table-bordered">
+              <table class="table table-bordered table-encomendas">
                 <tbody>
-                  <tr><td><img src="images/baseline_report_problem_black_48dp.png" alt="" width="10%"></td></tr>
+                  <tr><td><img src="images/checked.png" alt="" width="10%"></td></tr>
                   <tr><td>O produto {nome} de código {id} faltam 2 dias para a entrega.</td></tr>
                   <tr><td>O produto {nome} de código {id} faltam 3 dias para a entrega.</td></tr>
                 </tbody>
@@ -128,38 +129,38 @@
             </section>
 
 <!--Tabela Validade dos Produtos-->
-            <section>
+            <section class="section-table" >
               <h1>Validade dos Produtos</h1>
               <table class="table table-bordered">
                 <tbody>
                   <tr>
                     <td>
-                      <img src="images/baseline_report_problem_black_48dp.png" alt="alert" width="5%">
+                      <img src="images/danger-red.png" alt="alert" width="5%">
+                      O produto {nome} de código {id} faltam 1 dias para a entrega.
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <img src="images/danger-orange.png" alt="alert" width="5%">
                       O produto {nome} de código {id} faltam 2 dias para a entrega.
                     </td>
                   </tr>
                   <tr>
                     <td>
-                      <img src="images/baseline_report_problem_black_48dp.png" alt="alert" width="5%">
+                      <img src="images/danger-yelow.png" alt="alert" width="5%">
                       O produto {nome} de código {id} faltam 3 dias para a entrega.
                     </td>
                   </tr>
                   <tr>
                     <td>
-                      <img src="images/baseline_report_problem_black_48dp.png" alt="alert" width="5%">
-                      O produto {nome} de código {id} faltam 3 dias para a entrega.
+                      <img src="images/checked.png" alt="alert" width="5%">
+                      O produto {nome} de código {id} entregue com sucesso.
                     </td>
                   </tr>
                   <tr>
                     <td>
-                      <img src="images/baseline_report_problem_black_48dp.png" alt="alert" width="5%">
-                      O produto {nome} de código {id} faltam 3 dias para a entrega.
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <img src="images/baseline_report_problem_black_48dp.png" alt="alert" width="5%">
-                      O produto {nome} de código {id} faltam 3 dias para a entrega.
+                      <img src="images/checked.png" alt="alert" width="5%">
+                      O produto {nome} de código {id} entregue com sucesso.
                     </td>
                   </tr>
                 </tbody>
