alteracoes no css das tabelas -> Tela Home

--- a/home.html
+++ b/home.html
@@ -145,15 +145,15 @@
           <section class="conteudo">
             <header class="barra-atention">
               <div class="danger">
-                <img src="images/danger-yelow.png" alt="">
+                <img src="images/danger-yelow.png" alt="alerta">
                 <p>3 dias</p>
               </div>
               <div class="danger">
-                <img src="images/danger-orange.png" alt="">
+                <img src="images/danger-orange.png" alt="alerta">
                 <p>2 dias</p>
               </div>
               <div class="danger">
-                <img src="images/danger-red.png" alt="">
+                <img src="images/danger-red.png" alt="alerta">
                 <p>1 dia</p>
               </div>
             </header>
@@ -161,54 +161,53 @@
 <!--Tabela Encomendas-->
             <section class="section-table">
               <h1>Encomendas</h1>
-              <table class="table table-bordered table-encomendas">
+              <table class="table">
                 <tbody>
-                  <tr><td><img src="images/checked.png" alt="" width="10%"></td></tr>
-                  <tr><td>O produto {nome} de código {id} faltam 2 dias para a entrega.</td></tr>
-                  <tr><td>O produto {nome} de código {id} faltam 3 dias para a entrega.</td></tr>
+                  <tr>
+                    <td class="space-TD-table"><img src="images/checked.png" alt="checado"></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td>O produto {nome} de código {id} faltam 2 dias para a entrega.</td>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td>O produto {nome} de código {id} faltam 3 dias para a entrega.</td>
+                  </tr>
                 </tbody>
               </table>
-              <div class="link-see-more"><a href="">Ver Mais</a></div>              
+              <div class="link-see-more"><a href="">Ver Mais</a></div>    
             </section>
 
 <!--Tabela Validade dos Produtos-->
             <section class="section-table" >
               <h1>Validade dos Produtos</h1>
-              <table class="table table-bordered">
+              <table class="table">
                 <tbody>
                   <tr>
-                    <td>
-                      <img src="images/danger-red.png" alt="alert" width="5%">
-                      O produto {nome} de código {id} faltam 1 dias para a entrega.
-                    </td>
+                    <td class="space-TD-table"><img src="images/danger-red.png" alt="alerta"></td>
+                    <td>O produto {nome} de código {id} faltam 1 dias para a entrega.</td>
                   </tr>
                   <tr>
-                    <td>
-                      <img src="images/danger-orange.png" alt="alert" width="5%">
-                      O produto {nome} de código {id} faltam 2 dias para a entrega.
-                    </td>
+                    <td class="space-TD-table"><img src="images/danger-orange.png" alt="alerta"></td>
+                    <td>O produto {nome} de código {id} faltam 2 dias para a entrega.</td>
                   </tr>
                   <tr>
-                    <td>
-                      <img src="images/danger-yelow.png" alt="alert" width="5%">
-                      O produto {nome} de código {id} faltam 3 dias para a entrega.
-                    </td>
+                    <td class="space-TD-table"><img src="images/danger-yelow.png" alt="alerta"></td>
+                    <td>O produto {nome} de código {id} faltam 3 dias para a entrega.</td>
                   </tr>
                   <tr>
-                    <td>
-                      <img src="images/checked.png" alt="alert" width="5%">
-                      O produto {nome} de código {id} entregue com sucesso.
-                    </td>
+                    <td class="space-TD-table"><img src="images/checked.png" alt="checado"></td>
+                    <td>O produto {nome} de código {id} entregue com sucesso.</td>
                   </tr>
                   <tr>
-                    <td>
-                      <img src="images/checked.png" alt="alert" width="5%">
-                      O produto {nome} de código {id} entregue com sucesso.
-                    </td>
+                    <td class="space-TD-table"><img src="images/checked.png" alt="checado"></td>
+                    <td>O produto {nome} de código {id} entregue com sucesso.</td>
                   </tr>
                 </tbody>
               </table>
-              <a href="">Ver Mais</a>
+              <div class="link-see-more"><a href="">Ver Mais</a></div>    
             </footer>
           </section>
         </form>
