ajustando tables-encomenda e Validade de produtos

--- a/home.html
+++ b/home.html
@@ -143,8 +143,8 @@
 
           
 <!--Barra de alerta-->
-          <section class="conteudo">
-            <header class="barra-atention">
+          <section class="content-table">
+            <header class="alerts">
               <div class="danger">
                 <img src="images/danger-yelow.png" alt="alerta">
                 <p>3 dias</p>
