consertado erro da tabela com sidebar

--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
             </ul>
           </header>
 
-<section class="sidebar-tables" action="">       
+<section class="sidebar-tables">       
   <div class="sidebar">
     <div class="menu">
       <h3>Menu</h3>
