ajustado icones da sidebar e dropdown(falta transform-origin individual)

--- a/home.html
+++ b/home.html
@@ -54,7 +54,8 @@
     <ul class="list-unstyled ps-0">
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="false">
-          Usuários
+          <span>Usuários</span>
+          <img src="./images/outline_manage_accounts_white_48dp.png" alt="" width="12%">
         </button>
         <div class="collapse" id="home-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
@@ -65,7 +66,8 @@
       </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
-          Vendas
+          <span>Vendas</span>
+          <img src="./images/baseline_shopping_bag_white_48dp.png" alt="" width="12%">
         </button>
         <div class="collapse" id="dashboard-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
@@ -76,7 +78,8 @@
       </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#orders-collapse" aria-expanded="false">
-          Produtos
+          <span>Produtos</span>
+          <img src="./images/baseline_inventory_2_white_48dp.png" alt="" width="12%">
         </button>
         <div class="collapse" id="orders-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
@@ -88,7 +91,8 @@
       </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="false">
-          Relatórios
+          <span>Relatórios</span>
+          <img src="./images/baseline_leaderboard_white_48dp.png" alt="" width="12%">
         </button>
         <div class="collapse" id="account-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
@@ -98,26 +102,32 @@
           </ul>
         </div>
       </li>
+      <div class="mb">
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-          Encomendas
+          <span>Encomendas</span>
+          <img src="./images/baseline_local_shipping_white_48dp.png" alt="" width="12%">
         </button>
       </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-          Histórico
+          <span>Histórico</span>
+          <img src="./images/baseline_history_white_48dp.png" alt="" width="12%">
         </button>
       </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-          Configurações
+          <span>Configurações</span>
+          <img src="./images/baseline_settings_white_48dp.png" alt="" width="12%">
         </button>
       </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-          Suporte
+          <span>Suporte</span>
+          <img src="./images/baseline_help_center_white_48dp.png" alt="" width="12%">
         </button>
       </li>
+    </div>
     </ul>
   </div>
 
