ajustada seta com transição

--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
           <span>Vendas</span>
-          <img src="./images/baseline_shopping_bag_white_48dp.png" alt="" width="12%">
+          <img class="dashboard-shop" src="./images/baseline_shopping_bag_white_48dp.png" alt="" width="12%">
         </button>
         <div class="collapse" id="dashboard-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
